2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/mqueue.h,
	posix/include/rtems/posix/timer.h: Add missing includes.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/ip_icmp.c, libnetworking/netinet/ip_icmp.h:
	Misc. changes from FreeBSD.
	* libnetworking/netinet/tcp_var.h: Include <netinet/tcp_timer.h>.

2011-02-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/in_systm.h, 
	libnetworking/netinet/tcp_debug.c,
	libnetworking/netinet/tcp_debug.h, libnetworking/netinet/tcp_seq.h,
	libnetworking/netinet/tcp_var.h, libnetworking/netinet/tcpip.h:
	Misc changes from FreeBSD.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/net/if_pppvar.h: Add "extern C++" guards.
	Add header guard.
	* libnetworking/sys/signalvar.h: Comment out unused code.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/rtems/posix/mqueue.h: Relocate "extern C++" guards.
	* posix/include/rtems/posix/key.h: Add missing includes.
	* libnetworking/machine/in_cksum.h: Add missing includes.
	* libcsupport/include/clockdrv.h, libcsupport/include/console.h,
	libcsupport/include/spurious.h, libcsupport/include/rtems/error.h,
	libcsupport/include/rtems/libcsupport.h: Add missing includes.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/vm/vm_kern.h: Comment out unused vars.

2011-02-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/include/mqueue.h: Relocate "extern C++" guards.
	* sapi/include/rtems/fatal.h: Add missing includes.
	* score/include/rtems/score/tod.h: Add missing includes.
	* ftpd/ftpd.h: Add missing includes.
	* libmisc/devnull/devnull.h, libmisc/stackchk/stackchk.h:
	Fix header guard. Add missing includes.
	* score/include/rtems/debug.h, score/include/rtems/score/sysstate.h,
	score/include/rtems/score/timespec.h, 
	score/inline/rtems/score/address.inl, 
	score/inline/rtems/score/stack.inl,